--- a/src/components/PortfolioCard/PortfolioCard.module.scss
+++ b/src/components/PortfolioCard/PortfolioCard.module.scss
@@ -13,6 +13,7 @@
   transition: border-color 0.3s ease-in-out, box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
   img {
+    height: 100%;
     max-height: 266px;
     object-fit: cover;
     object-position: top; 
@@ -98,7 +99,7 @@
       line-height: 3rem;
       margin: 0;
       margin-top: 5%;
-      margin-bottom: 5%;
+      margin-bottom: 2%;
     }
 
     span {
